Change names from litecoin to earthdollar

--- a/1/litecoin.conf
+++ b/1/litecoin.conf
@@ -7,7 +7,7 @@ upnp=0
 port=20000
 rpcport=20001
 
-# always run a server, even with bitcoin-qt
+# always run a server, even with EarthDollar-qt
 server=1
 
 # enable SSL for RPC server
